--- a/app/views/direccts/create.js.erb
+++ b/app/views/direccts/create.js.erb
@@ -2,6 +2,11 @@ $(document).ready(function() {
   $(".modal-backdrop").hide();
   $("#ModalDirecct").hide();
   $(".modal-open").css({overflow: 'scroll'});
-  document.getElementById("ppsp_direcct_id").innerHTML = "<%= j(render 'form_field_direcct') %>";
+  if (document.getElementById("ppsp_direcct_id")) {
+    document.getElementById("ppsp_direcct_id").innerHTML = "<%= j(render 'form_field_direcct') %>";
+  }
+  if (document.querySelector(".list-database")) {
+    document.querySelector(".list-database").innerHTML = "<%= j(render 'list_direccts') %>";
+  }
 })
 
