--- a/app/views/deminings/index.html.erb
+++ b/app/views/deminings/index.html.erb
@@ -1,7 +1,20 @@
-<% @deminings.each do |demining| %>
-  <div class="card-database">
-    <%= link_to demining, demining_path(demining) %>
-    <%= link_to "Edit", edit_demining_path(demining) %>
-    <%= link_to "x", demining_path(demining), method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+<% if policy(Demining).new? %>
+  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ModalDemining">
+    Ajouter un centre de déminage
+  </button>
+<% end %>
+<%# Modal Demining %>
+<% if policy(Demining).new? %>
+  <div class="modal fade" id="ModalDemining" tabindex="-1" role="dialog" aria-labelledby="ModalDemining" aria-hidden="true">
+    <%= render 'ppsps/modal_demining' %>
   </div>
 <% end %>
+<div class="list-database">
+  <% @deminings.each do |demining| %>
+    <div class="card-database">
+      <%= link_to demining, demining_path(demining) %>
+      <%= link_to "Edit", edit_demining_path(demining) %>
+      <%= link_to "x", demining_path(demining), method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+    </div>
+  <% end %>
+</div>
