--- a/app/views/direccts/index.html.erb
+++ b/app/views/direccts/index.html.erb
@@ -1,7 +1,20 @@
-<% @direccts.each do |direcct| %>
-  <div class="card-database">
-    <%= link_to direcct, direcct_path(direcct) %>
-    <%= link_to "Edit", edit_direcct_path(direcct) %>
-    <%= link_to "x", direcct_path(direcct), method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+<% if policy(Direcct).new? %>
+  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ModalDirecct">
+    Ajouter un DIRECCT
+  </button>
+<% end %>
+<%# Modal Direcct %>
+<% if policy(Direcct).new? %>
+  <div class="modal fade" id="ModalDirecct" tabindex="-1" role="dialog" aria-labelledby="ModalDirecct" aria-hidden="true">
+    <%= render 'ppsps/modal_direcct' %>
   </div>
 <% end %>
+<div class="list-database">
+  <% @direccts.each do |direcct| %>
+    <div class="card-database">
+      <%= link_to direcct, direcct_path(direcct) %>
+      <%= link_to "Edit", edit_direcct_path(direcct) %>
+      <%= link_to "x", direcct_path(direcct), method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+    </div>
+  <% end %>
+</div>
