--- a/app/views/moas/create.js.erb
+++ b/app/views/moas/create.js.erb
@@ -2,6 +2,11 @@ $(document).ready(function() {
   $(".modal-backdrop").hide();
   $("#ModalMoa").hide();
   $(".modal-open").css({overflow: 'scroll'});
-  document.getElementById("ppsp_moa_id").innerHTML = "<%= j(render 'form_field_moa') %>";
+  if (document.getElementById("ppsp_moa_id")) {
+    document.getElementById("ppsp_moa_id").innerHTML = "<%= j(render 'form_field_moa') %>";
+  }
+  if (document.querySelector(".list-database")) {
+    document.querySelector(".list-database").innerHTML = "<%= j(render 'list_moas') %>";
+  }
 })
 
