--- a/app/views/work_medecines/create.js.erb
+++ b/app/views/work_medecines/create.js.erb
@@ -2,6 +2,11 @@ $(document).ready(function() {
   $(".modal-backdrop").hide();
   $("#ModalWorkMedecine").hide();
   $(".modal-open").css({overflow: 'scroll'});
-  document.getElementById("ppsp_work_medecine_id").innerHTML = "<%= j(render 'form_field_work_medecine') %>";
+  if (document.getElementById("ppsp_work_medecine_id")) {
+    document.getElementById("ppsp_work_medecine_id").innerHTML = "<%= j(render 'form_field_work_medecine') %>";
+  }
+  if (document.querySelector(".list-database")) {
+    document.querySelector(".list-database").innerHTML = "<%= j(render 'list_work_medecines') %>";
+  }
 })
 
