--- a/app/views/anti_poisons/edit.html.erb
+++ b/app/views/anti_poisons/edit.html.erb
@@ -1,1 +1,6 @@
-<%= render 'form' %>
+<%= simple_form_for @anti_poison do |f| %>
+  <%= f.input :name %>
+  <%= f.input :address %>
+  <%= f.input :phone %>
+  <%= f.submit %>
+<% end %>
