--- a/app/views/ppsps/_modal_moe.html.erb
+++ b/app/views/ppsps/_modal_moe.html.erb
@@ -1,7 +1,7 @@
 <div class="modal-dialog">
   <div class="modal-content">
     <div class="modal-header">
-      <h5 class="modal-title" id="ModalMoe">Ajouter un coordinateur sécurité</h5>
+      <h5 class="modal-title" id="ModalMoe">Ajouter un maître d'oeuvre</h5>
       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
