--- a/app/views/ppsps/index.html.erb
+++ b/app/views/ppsps/index.html.erb
@@ -1,13 +1,19 @@
 <%= link_to "Créer un nouveau PPSP", new_ppsp_path %>
-<%= link_to "Modifier les bases de données", database_path %>
+<% if policy(Page).database? %>
+  <%= link_to "Modifier les bases de données", database_path %>
+<% end %>
 
 
 <h1>Mes anciens PPSP</h1>
 <% @ppsps.each do |ppsp| %>
   <div class="card-ppsp">
-    <%= link_to "PPSP REF #{ppsp.project_information.reference}", ppsp_path(ppsp) %>
-    <%= link_to "Exporter en PDF", ppsp_path(ppsp, format: :pdf), target: "_blank" %>
-    <%= link_to "edit", edit_ppsp_path(ppsp) %>
-    <%= link_to "x", ppsp_path(ppsp), method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer ce document ?"} %>
+      <%= link_to "PPSP REF #{ppsp.project_information.reference}", ppsp_path(ppsp) %>
+      <%= link_to "Exporter en PDF", ppsp_path(ppsp, format: :pdf), target: "_blank" %>
+    <% if policy(ppsp).edit? %>
+      <%= link_to "edit", edit_ppsp_path(ppsp) %>
+    <% end %>
+    <% if policy(ppsp).destroy? %>
+      <%= link_to "x", ppsp_path(ppsp), method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer ce document ?"} %>
+    <% end %>
   </div>
 <% end %>
