--- a/app/assets/stylesheets/components/_pdf.scss
+++ b/app/assets/stylesheets/components/_pdf.scss
@@ -3,8 +3,6 @@
 
 // On importe Bootstrap etc.. directement dans le layout views/layout/pdf.html.erb
 
-// Banner
-
 .pdf-banner {
   height: 300px;
   color: white;
@@ -34,8 +32,6 @@
     font-size: 18px;
 }
 
-// Titres
-
 .pdf-title {
   text-align: center;
   font-weight: 500;
@@ -51,12 +47,51 @@
 }
 
 .pdf-subsubtitle {
-  text-align: center;
-  font-weight: 400;
+  font-weight: 700;
+  text-decoration: underline;
   font-size: 18px;
 }
 
 .pdf-text-container {
   padding: 8px;
   box-shadow: 2px 2px 4px 4px rgba(204, 204, 204, 0.5);
+  text-align: center;
+}
+
+.container-50 {
+  width: 50%;
+  text-align: start;
+  margin: auto;
+}
+
+.flexbox {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.flex-div {
+  width: 50%;
+}
+
+.mb-1 {
+  margin-bottom: 1em;
+}
+
+.mb-2 {
+  margin-bottom: 2em;
+}
+
+.mb-3 {
+  margin-bottom: 3em;
+}
+
+.my-3 {
+  margin-bottom: 3em;
+  margin-top: 3em;
+}
+
+.page-break { 
+  display:block; 
+  clear:both; 
+  page-break-after:always; 
 }
