--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,15 +1,42 @@
-.card-info-selected {
-  border: 1px solid black;
-  padding: 4px;
-  padding-right: 10px;
-  border-radius: 4px;
-  margin: 4px;
-  display: inline-flex;
-  position: relative
+.without-decoration:hover {
+  text-decoration: none;
 }
 
-.card-btn-delete {
+.card-ppsp {
+  width: 300px;
+  padding: 10px;
+  color: black;
+  margin: 6px;
+  border-radius: 8px;
+  box-shadow: 1px 1px 2px 2px $blue-light;
+  &:hover {
+    box-shadow: 1px 1px 2px 2px $blue-dark;
+  }
+}
+
+.card-reference {
+  text-align: center;
+  font-weight: 700;
+  font-size: 20px;
+}
+
+.card-body {
+  font-size: 14px;
+}
+
+.card-ppsp-footer {
+  font-style: italic;
+  font-size: 12px;
+}
+
+.card-ppsp-delete {
   position: relative;
-  top: -10px;
-  right: -8px;
+  float: right;
+  font-size: 18px;
+  color: $blue-dark;
+  font-weight: 700;
+  &:hover{
+    color: $blue-dark;
+    text-decoration: none;
+  }
 }
