--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -4,7 +4,12 @@
 $red: #FD1015;
 $blue: #167FFB;
 $yellow: #FFC65A;
-$orange: #E67E22;
+// $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+$orange: #ff7e67;
+$orange-dark: #e66d58;
+$blue-dark: #006a71;
+$blue-light: #68b0ab;
+$gray-light: #ecf4f3;
