--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -3,6 +3,7 @@
 }
 
 .card-ppsp {
+  z-index: -1;
   width: 300px;
   padding: 10px;
   color: black;
@@ -32,11 +33,26 @@
 .card-ppsp-delete {
   position: relative;
   float: right;
+  border: none;
   font-size: 18px;
   color: $blue-dark;
   font-weight: 700;
   &:hover{
-    color: $blue-dark;
+    color: black;
+    text-decoration: none;
+  }
+}
+
+.card-ppsp-edit {
+  z-index: 9999;
+  position: relative;
+  float: right;
+  border: none;
+  font-size: 18px;
+  color: $blue-dark;
+  font-weight: 700;
+  &:hover{
+    color: black;
     text-decoration: none;
   }
 }
