--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -13,7 +13,14 @@
   width: 40px;
 }
 
-.navbar-text {
+.navbar-company {
   font-weight: 700;
   font-size: 20px;
+  text-align: center;
+}
+
+.navbar-user {
+  font-weight: 400;
+  font-size: 14px;
+  text-align: center;
 }
